#
# some news ... see also TODO for hints
#



2021-06-12 -> ## target stuff
	      regular void-linux updates
	      add xfce and xorg to the image (!)
	      add midorit to image

	      ## repo stuff
	      some documentation adds
	      start preparing PI-ENV_V0.0.2

2021-06-10 -> ## lcd2004_i2c && sensor_pi stuff
              fix missing NEWLINES

              ## database stuff
              add skeleton for tool to readout the database content

              ## readout_db
              add skeleton

2021-06-09 -> ## lcd2004_i2c && sensor_pi stuff
              extend error reporting (see also TODO)

              ## amtrack stuff
	      add content to database

	      ## target stuff
	      regular void-linux updates

2021-06-08 -> ## database stuff
              change format of database -> date is the PRIMARY KEY

              ## amtrack
              add first real measured data to the database

2021-06-07 -> ## amtrack && repo stuff
              add some first code content for sqlite handling
              change init screen layout to default again

              ## lcd2004_i2c && sensor_pi stuff
              add kdo argument to become a daemon

              ## target stuff
	      activate sensor_daemon and lcd_daemon via runit

2021-06-06 -> ## amtrack && repo stuff
              add first sqlite content

2021-06-03 -> ## amtrack stuff
              add some debugging info

              ## lcd2004_i2c stuff
	      fix bug in lcd_write_string

2021-06-02 -> ## amtrack stuff
              fix values[] handling

              ## libhelper stuff
              add new function to alloc a string

	      ## repo stuff
	      add 2 new Makefile tags to make thinks easier

2021-06-01 -> ## amtrack stuff
              add next parts for display handling

2021-05-31 -> ## sensor_pi && amtrack stuff
              add first parts for fifo handling

2021-05-29 -> ## sensor_pi stuff
              add first parts for client fifo thread handling
